# neutron_event_analyzer

./: .gitignore  LICENSE  README.md  plotter.py  pyproject.toml
.documents/: ASSOCIATION_VALIDATION.md  AUTO_SAVE_AND_CLI_GUIDE.md  CHANGES_SUMMARY.md  CLI_USAGE.md  EMPIR_PARAMETER_OPTIMIZATION.md  HTML_REPR_GUIDE.md  ITERATIVE_OPTIMIZATION.md  NEW_FEATURES.md  STATS_TABLE_SUMMARY.md  UNIFIED_API_GUIDE.md  USAGE_EXAMPLES.md
docs/: OPTIMIZER.md
notebooks/: README.md  advanced_association_methods.ipynb  example_optimizer_usage.py  optimizer_demo.ipynb  pixel_association_demo.ipynb  settings_example.json  settings_usage_example.py  tutorial.ipynb
src/neutron_event_analyzer/: __init__.py  analyser.py  cli.py  config.py  empir_diagnostics.py  empir_optimizer.py  empir_runner.py  iterative_optimizer.py  parameter_suggester.py  plotter.py
tests/: README.md  README_optimizer.md  __init__.py  association_optimizer.py  conftest.py  example_optimizer_usage.py  test_api_cli_equivalence.py  test_association_optimizer.py  test_association_validation.py  test_csv_loading.py  test_empir_algorithm.py  test_iterative_optimizer.py  test_new_features.py  test_parameter_suggester.py  test_pixel_loading.py  test_settings.py
