[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron_event_analyzer"
version = "0.2.0"
description = "A package for analyzing neutron event camera data"
readme = "README.md"
authors = [{ name = "Tsviki Y. Hirsh", email = "tsviki.hirsh@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
lumacam = ["lumacamTesting", "yaspin>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
"Homepage" = "https://github.com/TsvikiHirsh/neutron_event_analyzer"
"Repository" = "https://github.com/TsvikiHirsh/neutron_event_analyzer"

[project.scripts]
nea-suggest = "neutron_event_analyzer.cli:main_suggest"
nea-assoc = "neutron_event_analyzer.cli:main_assoc"